--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button"></button>
+        <button type="button">Заказать услугу</button>
     </section>
 
     <section>
@@ -67,22 +67,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li><img src="./images/img3.jpg" alt="сотрудник1" width="270">
-                <h4>Игорь Демьяненко</h4>
+                <h3>Игорь Демьяненко</h3>
                 <p lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="./images/img4.jpg" alt="сотрудник2" width="270">
-                <h4>Ольга Репина</h4>
+                <h3>Ольга Репина</h3>
                 <p lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img5.jpg" alt="сотрудник3" width="270">
-                <h4>Николай Тарасов</h4>
+                <h3>Николай Тарасов</h3>
                 <p lang="en">Marketing</p>
             </li>
             <li>
                 <img src="./images/img6.jpg" alt="сотрудник4" width="270">
-                <h4>Михаил Ермаков</h4>
+                <h3>Михаил Ермаков</h3>
                 <p lang="en">UI Designer</p>
             </li>
         </ul>
