обгортає в спан логотип для регулювання кольору

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <nav>
-        <a class="logo" href="" lang="en">Web<span class="studio">Studio</span></a>
+        <a class="logo" href="" lang="en"> <span class="web">Web</span>Studio</a>
         <ul class="list-nav">
             <li class="list"> <a href="">Студия</a> </li>
             <li class="list"> <a href="">Портфолио</a> </li>
