--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
 
-    <section>
+    <section class="main">
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
     </section>
