--- a/index.html
+++ b/index.html
@@ -13,52 +13,52 @@
 
 <body>
 
-    <header>
+    <header class="header">
         <nav>
-        <a class="logo" href="" lang="en"> <span class="web">Web</span>Studio</a>
-        <ul class="list-nav">
-            <li class="list"> <a href="">Студия</a> </li>
-            <li class="list"> <a href="">Портфолио</a> </li>
-            <li class="list"> <a href="">Контакты</a> </li>
+        <a class="logo link" href="" lang="en">Web<span class="studio">Studio</span></a>
+        <ul class="site-nav">
+            <li class="list current"> <a href="./index.html" class="link">Студия</a> </li>
+            <li class="list"> <a href="./portfolio.html" class="link">Портфолио</a> </li>
+            <li class="list"> <a href="" class="link">Контакты</a> </li>
         </ul>
         </nav>
-        <ul class="list-nav">
-            <li class="list"> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="list"> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="auth-nav">
+            <li class="list"> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="list"> <a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
 
     </header>
     <main>
 
     <section class="main">
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="btn">Заказать услугу</button>
     </section>
 
     <section>
         <h2>Преимущества</h2>
         <ul>
-            <li class="list"><h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <li class="list"><h3 class="subtitle">Внимание к деталям</h3>
+            <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li class="list">
-            <h3>Пунктуальность</h3>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <h3 class="subtitle">Пунктуальность</h3>
+            <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
         <li class="list">
-            <h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <h3 class="subtitle">Планирование</h3>
+            <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
         <li class="list">
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="subtitle">Современные технологии</h3>
+            <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
         </ul>
         
     </section>
 
     <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="heading">Чем мы занимаемся</h2>
         <ul>
             <li class="list"><img src="./images/img.jpg" alt="работа с версткой" width="370"></li>
             <li class="list"><img src="./images/img1.jpg" alt="работа со стилизацией" width="370"></li>
@@ -68,40 +68,40 @@
     </section>
 
     <section>
-        <h2>Наша команда</h2>
+        <h2 class="heading">Наша команда</h2>
         <ul>
             <li class="list"><img src="./images/img3.jpg" alt="сотрудник1" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p lang="en">Product Designer</p>
+                <h3 class="name">Игорь Демьяненко</h3>
+                <p lang="en" class="position">Product Designer</p>
             </li>
             <li class="list">
                 <img src="./images/img4.jpg" alt="сотрудник2" width="270">
-                <h3>Ольга Репина</h3>
-                <p lang="en">Frontend Developer</p>
+                <h3 class="name">Ольга Репина</h3>
+                <p lang="en" class="position">Frontend Developer</p>
             </li>
             <li class="list">
                 <img src="./images/img5.jpg" alt="сотрудник3" width="270">
-                <h3>Николай Тарасов</h3>
-                <p lang="en">Marketing</p>
+                <h3 class="name">Николай Тарасов</h3>
+                <p lang="en" class="position">Marketing</p>
             </li>
             <li class="list">
                 <img src="./images/img6.jpg" alt="сотрудник4" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p lang="en">UI Designer</p>
+                <h3 class="name">Михаил Ермаков</h3>
+                <p lang="en" class="position">UI Designer</p>
             </li>
         </ul>
     </section>
 
     </main>
 
-    <footer>
-        <a href="" lang="en">WebStudio</a>
-        <address>
+    <footer class="footer">
+        <a href="" lang="en" class="logo link">Web<span class="studio-white">Studio</span></a>
+        <address class="address">
             г. Киев, пр-т Леси Украинки, 26
         </address>
         <ul>
-            <li class="list"><a href="mailto:info@example.com">info@example.com</a></li>
-            <li class="list"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li class="list"><a href="mailto:info@example.com" class="mailtel link">info@example.com</a></li>
+            <li class="list"><a href="tel:+380991111111" class="mailtel link">+38 099 111 11 11</a></li>
         </ul>
     </footer>
 
