--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,18 @@
 
 <body>
     
-<header>
+ <header class="header">
         <nav>
-        <a class="logo" href="" lang="en"> <span class="web">Web</span>Studio</a>
-        <ul class="list-nav">
-            <li class="list"> <a href="">Студия</a> </li>
-            <li class="list"> <a href="">Портфолио</a> </li>
-            <li class="list"> <a href="">Контакты</a> </li>
+        <a class="logo link" href="" lang="en">Web<span class="studio">Studio</span></a>
+        <ul class="site-nav">
+            <li class="list current"> <a href="./index.html" class="link">Студия</a> </li>
+            <li class="list"> <a href="./portfolio.html" class="link">Портфолио</a> </li>
+            <li class="list"> <a href="" class="link">Контакты</a> </li>
         </ul>
         </nav>
-        <ul class="list-nav">
-            <li class="list"> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="list"> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="auth-nav">
+            <li class="list"> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="list"> <a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
 
     </header>
@@ -90,14 +90,14 @@
         </section>
     </main>
 
-    <footer>
-        <a href="" lang="en">WebStudio</a>
-        <address>
+    <footer class="footer">
+        <a href="" lang="en" class="logo link">Web<span class="studio-white">Studio</span></a>
+        <address class="address">
             г. Киев, пр-т Леси Украинки, 26
         </address>
         <ul>
-            <li class="list"><a href="mailto:info@example.com">info@example.com</a></li>
-            <li class="list"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li class="list"><a href="mailto:info@example.com" class="mailtel link">info@example.com</a></li>
+            <li class="list"><a href="tel:+380991111111" class="mailtel link">+38 099 111 11 11</a></li>
         </ul>
     </footer>
 
