--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav>
         <a class="logo link" href="" lang="en">Web<span class="studio">Studio</span></a>
         <ul class="site-nav">
-            <li class="list current"> <a href="./index.html" class="link">Студия</a> </li>
-            <li class="list"> <a href="./portfolio.html" class="link">Портфолио</a> </li>
-            <li class="list"> <a href="" class="link">Контакты</a> </li>
+            <li class="list"><a href="./index.html" class="link current">Студия</a></li>
+            <li class="list"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="list"><a href="" class="link">Контакты</a></li>
         </ul>
         </nav>
         <ul class="auth-nav">
@@ -32,7 +32,7 @@
 
     <section class="main">
         <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="btn">Заказать услугу</button>
+        <button type="button"  class="btn">Заказать услугу</button>
     </section>
 
     <section>
