--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
         <nav>
         <a class="logo link" href="" lang="en">Web<span class="studio">Studio</span></a>
         <ul class="site-nav">
-            <li class="list current"> <a href="./index.html" class="link">Студия</a> </li>
-            <li class="list"> <a href="./portfolio.html" class="link">Портфолио</a> </li>
-            <li class="list"> <a href="" class="link">Контакты</a> </li>
+            <li class="list current"><a href="./index.html" class="link">Студия</a></li>
+            <li class="list"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="list"><a href="" class="link">Контакты</a></li>
         </ul>
         </nav>
         <ul class="auth-nav">
@@ -34,57 +34,57 @@
             <h1>Портфолио</h1>
             <ul>
                 <li class="list">
-                    <button type="button">Все</button>
+                    <button type="button" class="btn-list">Все</button>
                 </li>
                 <li class="list">
-                    <button type="button">Веб-сайты</button>
+                    <button type="button" class="btn-list">Веб-сайты</button>
                 </li>
                 <li class="list">
-                    <button type="button">Приложения</button>
+                    <button type="button" class="btn-list">Приложения</button>
                 </li>
                 <li class="list">
-                    <button type="button">Дизайн</button>
+                    <button type="button" class="btn-list">Дизайн</button>
                 </li>
                 <li class="list">
-                    <button type="button">Маркетинг</button>
+                    <button type="button" class="btn-list">Маркетинг</button>
                 </li>
             </ul>
             <ul>
                 <li class="list"><img src="./images/img7.jpg" alt="открытый ноутбук" width="370">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="list-title">Технокряк</h2>
+                <p class="list-text">Веб-сайт</p>
                 </li>
                 <li class="list"><img src="./images/img8.jpg" alt="постер игроков" width="370">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="list-title">Постер New Orlean vs Golden Star</h2>
+                <p class="list-text">Дизайн</p>
                 </li>
                 <li class="list"><img src="./images/img9.jpg" alt="название ресторана" width="370">
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <h2 class="list-title">Ресторан Seafood</h2>
+                <p class="list-text">Приложение</p>
                 </li>
                 <li class="list"><img src="./images/img10.jpg" alt="наушники" width="370">
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="list-title">Проект Prime</h2>
+                <p class="list-text">Маркетинг</p>
                 </li>
                 <li class="list"><img src="./images/img11.jpg" alt="коробки" width="370">
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p>
+                <h2 class="list-title">Проект Boxes</h2>
+                <p class="list-text">Приложение</p>
                 </li>
                 <li class="list"><img src="./images/img12.jpg" alt="компьютер" width="370">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="list-title">Inspiration has no Borders</h2>
+                <p class="list-text">Веб-сайт</p>
                 </li>
                 <li class="list"><img src="./images/img13.jpg" alt="раскрытая книга" width="370">
-                <h2>Издание Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="list-title">Издание Limited Edition</h2>
+                <p class="list-text">Дизайн</p>
                 </li>
                 <li class="list"><img src="./images/img14.jpg" alt="бирка" width="370">
-                <h2>Проект LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="list-title">Проект LAB</h2>
+                <p class="list-text">Маркетинг</p>
                 </li>
                 <li class="list"><img src="./images/img15.jpg" alt="набор на компьютере" width="370">
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
+                <h2 class="list-title">Growing Business</h2>
+                <p class="list-text">Приложение</p>
                 </li>
             </ul>
         </section>
